--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ import '../styles/global.css';
 		<ClientRouter />
 	</head>
 
-	<body class="bg-gray-100 font-sans">
+	<body class="bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-gray-100 font-sans font-medium" data-theme="light">
 		<div class="mx-auto max-w-[692px] overflow-x-hidden px-6 py-12 antialiased sm:py-32 md:overflow-x-visible md:py-16">
 			<Header />
 			<slot />
