--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,12 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<h1>Victor Lebecq</h1>
-	<h2>Développeur front end</h2>
+	<h1 class="text-2xl">Victor Lebecq</h1>
+	<h2 class="text-neutral-500">Développeur web @Digit'Alp </h2>
+	<p class="font-light text-balance mt-6">
+		I’m a 25 years old developer based in France who likes to work with <strong>React</strong>, <strong>Wordpress</strong>, and <strong>AstroJS</strong>. With a keen eye for design, I love crafting immersive and scalable experiences on the web. Together, let’s bring your projects to life.
+	</p>
+	<div class="mt-16 sm:mt-32">
+		<h2 class="">Projets</h2>
+	</div>
 </Layout>
