--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import { ClientRouter } from 'astro:transitions';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
 import '../styles/global.css';
 
 
@@ -10,7 +12,7 @@ import '../styles/global.css';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -21,9 +23,10 @@ import '../styles/global.css';
 	</head>
 
 	<body class="bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-gray-100 font-sans font-medium" data-theme="light">
-		<div class="mx-auto max-w-[692px] overflow-x-hidden px-6 py-12 antialiased sm:py-32 md:overflow-x-visible md:py-16">
+		<div class="mx-auto max-w-[692px] overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
 			<Header />
 			<slot />
+			<Footer />
 		</div>
 	</body>
 
