--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,20 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro';
 
 ---
 
 <Layout>
 	<h1 class="text-2xl">Victor Lebecq</h1>
-	<h2 class="text-neutral-500">Développeur web @Digit'Alp </h2>
-	<p class="font-light text-balance mt-6">
-		I’m a 25 years old developer based in France who likes to work with <strong>React</strong>, <strong>Wordpress</strong>, and <strong>AstroJS</strong>. With a keen eye for design, I love crafting immersive and scalable experiences on the web. Together, let’s bring your projects to life.
-	</p>
+	<h2 class="text-neutral-500">Développeur web @ <a href="https://digit-alp.fr" target="_blank">Digit'Alp</a> </h2>
+	<div class="font-light text-balance mt-6 space-y-4">
+		<p class="">
+			Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong>React</strong>, <strong>Wordpress</strong> et <strong>AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
+		</p>
+	</div>
 	<div class="mt-16 sm:mt-32">
 		<h2 class="">Projets</h2>
+	</div>
+	<div class="mt-16 sm:mt-32">
+		<h2 class="">Blog</h2>
 	</div>
 </Layout>
