(style) : made some styling changes to look more as expected

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,13 @@ import Layout from '@/layouts/Layout.astro';
 	<h2 class="text-neutral-500">Développeur web @ <a href="https://digit-alp.fr" target="_blank">Digit'Alp</a> </h2>
 	<div class="font-light text-balance mt-6 space-y-4">
 		<p class="">
-			Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong>React</strong>, <strong>Wordpress</strong> et <strong>AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
+			Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> et <strong class="font-medium">AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
 		</p>
 	</div>
 	<div class="mt-16 sm:mt-32">
-		<h2 class="">Projets</h2>
+		<h2 class="text-neutral-500">[ Projets ]</h2>
 	</div>
 	<div class="mt-16 sm:mt-32">
-		<h2 class="">Blog</h2>
+		<h2 class="text-neutral-500">[ Blog ]</h2>
 	</div>
 </Layout>
