--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@
 const year = new Date().getFullYear();
 ---
 
-<footer class="border-t border-neutral-200 py-2 mt-16 sm:mt-32">
+<footer class="border-t border-neutral-200 dark:border-neutral-800 py-2 mt-16 sm:mt-32">
   <span class="text-xs text-neutral-500">© {year} Victor Lebecq</span>
 </footer>
