--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ import '../styles/global.css';
 		<ClientRouter />
 	</head>
 
-	<body class="bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-gray-100 font-sans font-medium" data-theme="light">
+	<body class="bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100 font-sans font-medium" data-theme="dark">
 		<div class="mx-auto max-w-[692px] overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
 			<Header />
 			<slot />
