--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 
 import Shortcut from "@/components/ui/Shortcut.astro";
 
-import logo from "../assets/Logo_3D.png"
+import logo from "@/assets/Logo_3D.png"
 
 ---
 <header class="mb-16 sm:mb-32">
@@ -12,7 +12,7 @@ import logo from "../assets/Logo_3D.png"
       <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-6 object-cover object-center" />
     </a>
     <nav>
-      <ul class="flex items-center gap-4">
+      <ul class="flex items-center gap-3 sm:gap-4">
         <li class="p-1">
           <a href="/about" aria-label="Aller sur la page a propos">
             <span>A propos</span>
@@ -32,7 +32,10 @@ import logo from "../assets/Logo_3D.png"
 
 <script>
   import { handleKeyboardShortcut } from "../../src/utils/keyboardShortcut";
-  document.addEventListener('keydown', handleKeyboardShortcut);
+  
+  if (!window.matchMedia("(pointer:coarse)").matches) {
+    document.addEventListener('keydown', handleKeyboardShortcut);
+  }
 </script>
 
 
