--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ import '../styles/global.css';
 	</head>
 
 	<body class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100" data-theme="dark">
-		<div class="mx-auto max-w-[692px] overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
+		<div class="mx-auto max-w-3xl overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
 			<Header />
 			<slot />
 			<Footer />
