--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Card from '@/components/ui/Card.astro';
 import Layout from '@/layouts/Layout.astro';
 
 ---
@@ -11,10 +12,15 @@ import Layout from '@/layouts/Layout.astro';
 			Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> et <strong class="font-medium">AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
 		</p>
 	</div>
-	<div class="mt-16 sm:mt-32">
-		<h2 class="text-neutral-500">[ Projets ]</h2>
+	<div class="mt-12 sm:mt-16">
+		<h2 class="text-neutral-500 mb-4">[ Projets ]</h2>
+		<div class="space-y-2">
+			<Card />
+			<Card />
+			<Card />
+		</div>
 	</div>
-	<div class="mt-16 sm:mt-32">
+	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500">[ Blog ]</h2>
 	</div>
 </Layout>
