(style) : reduce the opacity when group is hovered but element is not

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,14 +13,19 @@ import Layout from '@/layouts/Layout.astro';
 		</p>
 	</div>
 	<div class="mt-12 sm:mt-16">
-		<h2 class="text-neutral-500 mb-4">[ Projets ]</h2>
-		<div class="space-y-2">
+		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
+		<div class="group space-y-2">
 			<Card />
 			<Card />
 			<Card />
 		</div>
 	</div>
 	<div class="mt-12 sm:mt-16">
-		<h2 class="text-neutral-500">[ Blog ]</h2>
+		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
+		<div class="group space-y-2">
+			<Card />
+			<Card />
+			<Card />
+		</div>
 	</div>
 </Layout>
