--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -1,10 +1,14 @@
 ---
+import { Image } from "astro:assets";
+
+import logo from "@/assets/Logo_3D.png"
+
 
 ---
 
-<div class="peer flex items-center rounded-xl gap-2 p-2 -ml-2 hover:bg-neutral-300 dark:hover:bg-neutral-700  sm:gap-4">
+<div class="flex items-center rounded-xl gap-2 p-2 -ml-2 hover:bg-neutral-300 dark:hover:bg-neutral-700 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:gap-4">
   <div class="size-12 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" ><circle cx="18.5" cy="17.5" r="3.5"/><circle cx="5.5" cy="17.5" r="3.5"/><circle cx="15" cy="5" r="1"/><path d="M12 17.5V14l-3-3 4-3 2 3h2"/></svg>
+    <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-4 object-cover object-center" />
   </div>
   <div class="flex-1">
     <h3 class="">Lorem ipsum dolor sit amet</h3>
