--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -6,7 +6,7 @@ import logo from "@/assets/Logo_3D.png"
 
 ---
 
-<div class="flex items-center rounded-xl gap-2 p-2 -ml-2 hover:bg-neutral-300 dark:hover:bg-neutral-700 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:gap-4">
+<div class="flex items-center rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 hover:bg-neutral-300 dark:hover:bg-neutral-700 group-hover:not-hover:opacity-20 sm:gap-4">
   <div class="size-12 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
     <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-4 object-cover object-center" />
   </div>
