--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,9 +12,9 @@ import Layout from "@/layouts/Layout.astro";
 	
   <div class="mt-12 sm:mt-16">
 		<div class="group">
-			<BlogCard />
-			<BlogCard />
-			<BlogCard />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
 		</div>
 	</div>
 </Layout>
