--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import BlogCard from '@/components/ui/BlogCard.astro';
 import Card from '@/components/ui/Card.astro';
 import Layout from '@/layouts/Layout.astro';
 
@@ -23,9 +24,9 @@ import Layout from '@/layouts/Layout.astro';
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
 		<div class="group space-y-2">
-			<Card />
-			<Card />
-			<Card />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
 		</div>
 	</div>
 </Layout>
