--- a/src/components/ui/BlogCard.astro
+++ b/src/components/ui/BlogCard.astro
@@ -4,20 +4,26 @@ type Props = {
   title: string;
   date: string;
   categories: string[];
+  slug: string;
 }
 
-const { title, date, categories } = Astro.props as Props;
+const { title, date, categories, slug = '#' } = Astro.props as Props;
 
 ---
 
-<div class="flex items-center rounded-xl p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20">
+<article class="relative isolate flex items-center rounded-xl p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20">
   <div class="flex-1">
-    <h3 class="">{title}</h3>
+    <h3 class="">
+      <a href={slug}>
+        <span class="absolute inset-0 z-10"></span>
+        {title}
+      </a>
+    </h3>
     <div class="space-x-2">
       {categories.map((category) => (
         <span class="bg-neutral-200 dark:bg-neutral-800 text-xs rounded w-fit px-2 py-1">{category}</span>
       ))}
     </div>
   </div>
-  <div class="text-xs">{date}</div>
-</div>
+  <time class="text-xs"><span>{date}</span></time>
+</article>
