--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,11 +10,11 @@ import Layout from "@/layouts/Layout.astro";
   <h1 class="text-2xl">Blog</h1>
 	<h2 class="text-neutral-500">Je documente ma veille et mon activité de freelance</h2>
 	
-  <div class="mt-12 sm:mt-16">
-		<div class="group">
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
-		</div>
+  <div class="group mt-12 sm:mt-16">
+    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
 	</div>
 </Layout>
