--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,10 @@ import Layout from '@/layouts/Layout.astro';
 <Layout>
 	<h1 class="text-2xl">Victor Lebecq</h1>
 	<h2 class="text-neutral-500">Développeur web @ <a href="https://digit-alp.fr" target="_blank" class="transition-colors ease-out duration-300 hover:text-neutral-900 dark:hover:text-neutral-100">Digit'Alp</a> </h2>
-	<div class="font-light text-balance mt-6 space-y-4">
-		<p class="">
-			Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> et <strong class="font-medium">AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
-		</p>
-	</div>
+	<p class="font-light text-balance mt-6 space-y-4">
+		Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> et <strong class="font-medium">AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
+	</p>
+	
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
 		<div class="group space-y-2">
@@ -24,9 +23,12 @@ import Layout from '@/layouts/Layout.astro';
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
 		<div class="group space-y-2">
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
 		</div>
 	</div>
+	
 </Layout>
