--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -3,15 +3,28 @@ import { Image } from "astro:assets";
 
 import logo from "@/assets/Logo_3D.png"
 
+type Props = {
+  title: string;
+  description: string;
+  illustration: ImageMetadata;
+  link: string;
+}
+
+const { title, description, illustration = logo, link } = Astro.props as Props;
 
 ---
 
-<div class="flex items-center rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 hover:bg-neutral-300 dark:hover:bg-neutral-700 sm:gap-4">
+<article class="relative flex items-center rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 hover:bg-neutral-300 dark:hover:bg-neutral-700 sm:gap-4">
   <div class="size-12 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
-    <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-4 object-cover object-center" />
+    <Image src={illustration} alt="Logo de Victor Lebecq" width="100" height="100" class="size-4 object-cover object-center" />
   </div>
   <div class="flex-1">
-    <h3 class="">Lorem ipsum dolor sit amet</h3>
-    <p class="font-light text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+    <h3 class="">
+      <a href={link}>
+        <span class="absolute inset-0 z-10"></span>
+        {title}
+      </a>
+    </h3>
+    <p class="font-light text-sm">{description}</p>
   </div>
-</div>
+</article>
