--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import BlogCard from '@/components/ui/BlogCard.astro';
-import Card from '@/components/ui/Card.astro';
 import Layout from '@/layouts/Layout.astro';
+import SocialLinks from '@/components/SocialLinks.astro';
+import Card from '@/components/ui/Card.astro';
+import BlogCard from '@/components/ui/BlogCard.astro';
 
 import logo from '@/assets/Logo_3D.png'
 
@@ -13,33 +14,7 @@ import logo from '@/assets/Logo_3D.png'
 	<p class="font-light text-balance mt-6 space-y-4">
 		Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> et <strong class="font-medium">AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
 	</p>
-	<ul class="flex gap-6 mt-6">
-		<li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-			<a href="https://github.com/pommito" aria-label="Mon profil Github" target="_blank">
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
-			</a>
-		</li>
-		<li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-			<a href="https://github.com/pommito" aria-label="Mon profil Linkedin" target="_blank">
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
-			</a>
-		</li>
-		<li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-			<a href="mailto:victor.lebecq.pro@gmail.com" aria-label="Mon adresse email">
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="4"/><path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8"/></svg>
-			</a>
-		</li>
-		<li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-			<a href="https://github.com/pommito" aria-label="Mon profil Instagram" target="_blank">
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg>
-			</a>
-		</li>
-		<li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-			<a href="TODO" aria-label="Mon CV" target="_blank">
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/></svg>
-			</a>
-		</li>
-	</ul>
+	<SocialLinks />
 	
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
