(feat) : add a WorkExperience component for the about page

--- a/src/components/ui/BlogCard.astro
+++ b/src/components/ui/BlogCard.astro
@@ -25,5 +25,5 @@ const { title, date, categories, slug = '#' } = Astro.props as Props;
       ))}
     </div>
   </div>
-  <time class="text-xs"><span>{date}</span></time>
+  <time class="text-sm"><span>{date}</span></time>
 </article>
