--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,12 @@
 ---
+import { Image } from "astro:assets";
+
 import Layout from "@/layouts/Layout.astro";
+import SocialLinks from "@/components/SocialLinks.astro";
+import WorkExperience from "@/components/ui/WorkExperience.astro";
+
+import image from "@/assets/about.jpg";
+
 
 
 
@@ -7,4 +14,25 @@ import Layout from "@/layouts/Layout.astro";
 
 <Layout>
   <h1 class="text-2xl">A propos</h1>
+	<h2 class="text-neutral-500">Trouver un petit text ici</h2>
+	<p class="font-light text-balance mt-6 space-y-4">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore, voluptatibus quasi, beatae, dolorem dolores nostrum earum rerum nisi obcaecati suscipit quaerat magni.
+	</p>
+  <Image src={image} alt="About" width="1280" height="720" class="mt-6 rounded" />
+  
+  <div class="mt-12 sm:mt-16">
+    <h2 class="text-neutral-500 mb-6">[ Experiences ]</h2>
+
+    <WorkExperience />
+    <WorkExperience />
+		
+	</div>
+  
+  <div class="mt-12 sm:mt-16">
+    <h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
+		<p class="font-light text-balance mt-6 space-y-4">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore, voluptatibus quasi, beatae, dolorem dolores nostrum earum rerum nisi obcaecati suscipit quaerat magni.
+    </p>
+	</div>
+  <SocialLinks />
 </Layout>
