--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
-import BlogCard from "@/components/ui/BlogCard.astro";
 import Layout from "@/layouts/Layout.astro";
+import BlogArticle from "@/components/BlogArticle.astro";
 
 
 
@@ -11,10 +11,10 @@ import Layout from "@/layouts/Layout.astro";
 	<h2 class="text-neutral-500">Je documente ma veille et mon activité de freelance</h2>
 	
   <div class="group mt-12 sm:mt-16">
-    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
-    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
-    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
-    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
-    <BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
+    <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
 	</div>
 </Layout>
