--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import SocialLinks from '@/components/SocialLinks.astro';
-import Card from '@/components/ui/Card.astro';
-import BlogCard from '@/components/ui/BlogCard.astro';
+import ProjectCard from '@/components/ProjectCard.astro';
+import BlogArticle from '@/components/BlogArticle.astro';
 
 import logo from '@/assets/Logo_3D.png'
 
@@ -19,19 +19,19 @@ import logo from '@/assets/Logo_3D.png'
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
 		<div class="group space-y-2">
-			<Card title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
-			<Card title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
-			<Card title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
+			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
+			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
+			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
 		</div>
 	</div>
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
 		<div class="group space-y-2">
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
-			<BlogCard title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
+			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
 		</div>
 	</div>
 	
