(feat) : add the company name in the WorkExperience component

--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -10,9 +10,10 @@ import Tag from "./ui/Tag.astro";
     <Image src={logoTitan} alt="Logo de Victor Lebecq" width="100" height="100" class="w-full h-full object-cover object-center" />
   </div>
   <div class="flex-1">
-    <h3 class="">Développeur Web Freelance</h3>
-    <p class="font-light text-sm">lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore, voluptatibus quasi, beatae.</p>
-    <div class="space-x-2">
+    <h3 class="">Développeur Web Freelance </h3>
+    <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">Titan Informatique</a>
+    <p class="font-light text-sm">lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore.</p>
+    <div class="space-x-1">
       <Tag label="React" />
       <Tag label="Wordpress" />
     </div>
