--- a/src/components/ui/Tag.astro
+++ b/src/components/ui/Tag.astro
@@ -6,4 +6,4 @@ type Propos = {
 const { label } = Astro.props as Propos;
 ---
 
-<span class="bg-neutral-200 dark:bg-neutral-800 text-xs rounded w-fit px-2 py-1">{label}</span>
+<span class="inline-block bg-neutral-200 dark:bg-neutral-800 text-xs leading-none rounded w-fit px-2 py-1 mt-1">{label}</span>
