--- a/src/components/BlogArticle.astro
+++ b/src/components/BlogArticle.astro
@@ -13,7 +13,7 @@ const { title, date, categories, slug = '#' } = Astro.props as Props;
 
 ---
 
-<article class="relative isolate flex items-center rounded-xl p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20">
+<article class="relative isolate flex items-center rounded-xl p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102">
   <div class="flex-1">
     <h3 class="">
       <a href={slug}>
@@ -21,7 +21,7 @@ const { title, date, categories, slug = '#' } = Astro.props as Props;
         {title}
       </a>
     </h3>
-    <div class="space-x-2">
+    <div class="space-x-1">
       {categories.map((category) => (
         <Tag label={category} />
       ))}
