--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -9,7 +9,7 @@
     </a>
   </li>
   <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-    <a href="https://github.com/pommito" aria-label="Mon profil Linkedin" target="_blank">
+    <a href="https://www.linkedin.com/in/victor-lebecq" aria-label="Mon profil Linkedin" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
     </a>
   </li>
@@ -19,7 +19,7 @@
     </a>
   </li>
   <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-    <a href="https://github.com/pommito" aria-label="Mon profil Instagram" target="_blank">
+    <a href="https://www.instagram.com/dev.by.vic" aria-label="Mon profil Instagram" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg>
     </a>
   </li>
