(style) : change the over animation of the ProjectCard

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import logo from '@/assets/Logo_3D.png'
 	
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
-		<div class="group space-y-2">
+		<div class="group">
 			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
 			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
 			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
@@ -26,7 +26,7 @@ import logo from '@/assets/Logo_3D.png'
 	</div>
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
-		<div class="group space-y-2">
+		<div class="group">
 			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
 			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
 			<BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'AstroJS']} slug='#' />
