--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -14,7 +14,7 @@ const { title, description, illustration = logo, link } = Astro.props as Props;
 
 ---
 
-<article class="relative flex items-center rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 hover:bg-neutral-300 dark:hover:bg-neutral-700 sm:gap-4">
+<div class="relative flex items-center rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102 sm:gap-4">
   <div class="size-12 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
     <Image src={illustration} alt="Logo de Victor Lebecq" width="100" height="100" class="size-4 object-cover object-center" />
   </div>
@@ -27,4 +27,4 @@ const { title, description, illustration = logo, link } = Astro.props as Props;
     </h3>
     <p class="font-light text-sm">{description}</p>
   </div>
-</article>
+</div>
