--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -7,7 +7,7 @@ import Tag from "./ui/Tag.astro";
 
 <div class="flex items-center rounded-xl gap-4 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20">
   <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
-    <Image src={logoTitan} alt="Logo de Victor Lebecq" width="100" height="100" class="w-full h-full object-cover object-center" />
+    <Image src={logoTitan} alt="Logo de Victor Lebecq" width="100" height="100" class="size-12 object-cover object-center" />
   </div>
   <div class="flex-1">
     <h3 class="">Développeur Web Freelance </h3>
