(refactor) : add a global style for <p> and remove repeated classes

--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -12,7 +12,7 @@ import Tag from "./ui/Tag.astro";
   <div class="flex-1">
     <h3 class="">Développeur Web Freelance </h3>
     <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">Titan Informatique</a>
-    <p class="font-light text-sm">lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore.</p>
+    <p class="text-sm !mt-0">lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore.</p>
     <div class="space-x-1">
       <Tag label="React" />
       <Tag label="Wordpress" />
