--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,10 +15,10 @@ import image from "@/assets/about.jpg";
 <Layout>
   <h1 class="text-2xl">A propos</h1>
 	<h2 class="text-neutral-500">Trouver un petit text ici</h2>
-	<p class="font-light text-pretty mt-6">
+	<p>
     Depuis tout petit, j'aime construire des choses, que ce soit avec du code ou avec mes mains. Quand je rencontre un problème, je veux lui trouver une solution. Aujourd'hui je met cette envie au service de mes clients en développant des solutions digitales venant répondre à leurs besoins.
 	</p>
-  <p class="font-light text-pretty mt-6">
+  <p>
     Quand je ne suis pas entrain de coder, je suis probablement entrain d'explorer les alpes à ski ou à pieds. 
   </p>
   <Image src={image} alt="About" width="1280" height="720" class="mt-6 rounded" />
@@ -31,10 +31,10 @@ import image from "@/assets/about.jpg";
   
   <div class="mt-12 sm:mt-16">
     <h2 class="text-neutral-500 mb-6">[ Technos ]</h2>
-		<p class="font-light text-pretty mt-6 space-y-4">
+		<p class="">
       Actuellement je travail principalement avec <strong class="font-medium">Wordpress</strong> ou des frameworks javascript comme <strong class="font-medium">React</strong> ou recemment <strong class="font-medium">AstroJS</strong> dont j'apprecie tout particulièrement la DX (Developer Experience). Pour le styling, après avoir élaborer mes maquettes sur Figma, j'aime utiliser <strong class="font-medium">TailwindCSS</strong> pour sa simplicité et son efficacité.
     </p>
-    <p class="font-light text-pretty mt-6">
+    <p class="">
       Avant chaque démarrage, je sélectionne la technologie qui répondra le plus efficacement à mes besoins, tout en minimisant (le plus possible) l'impact du projet sur notre belle planète.
     </p>
     <div class="flex items-center text-sm bg-neutral-300 dark:bg-neutral-800 border border-neutral-500 gap-2 mt-6 w-fit px-3 py-2 rounded">
