--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,15 +1,19 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @font-face {
-  font-family: 'Inter';
-  src: url('/assets/fonts/Inter-var.woff2') format('woff2');
+  font-family: "Inter";
+  src: url("/assets/fonts/Inter-var.woff2") format("woff2");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
 
 @theme {
-  --font-sans: 'Inter', 'sans-serif';
+  --font-sans: "Inter", "sans-serif";
 }
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
+p {
+  @apply font-light text-pretty mt-6;
+}
