--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -25,6 +25,6 @@ const { title, description, illustration = logo, link } = Astro.props as Props;
         {title}
       </a>
     </h3>
-    <p class="font-light text-sm">{description}</p>
+    <p class="!mt-0 text-sm">{description}</p>
   </div>
 </div>
