(feat): create a button for the search bar and rework shortcut style to match it

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,18 @@ import logo from "@/assets/Logo_3D.png"
     <nav>
       <ul class="flex items-center gap-3 sm:gap-4">
         <li class="p-1">
+          <button class="inline-flex items-center gap-1 rounded-lg bg-neutral-900/2 px-3 py-2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="-ml-0.5 size-4 fill-neutral-600 dark:fill-neutral-500"><path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd"></path></svg>
+            <kbd class="font-sans text-sm/4 text-neutral-500 dark:text-neutral-400">⌘K</kbd>
+            <kbd class="font-sans hidden text-sm/4 text-neutral-500 dark:text-neutral-400">Ctrl&nbsp;K</kbd>
+          </button>
+          <!-- <button class="inline-flex items-center gap-1 rounded-full bg-neutral-950/2 px-3 py-2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="-ml-0.5 size-4 fill-neutral-600 dark:fill-neutral-500"><path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd"></path></svg>
+            <kbd class="font-sans text-sm/4 text-neutral-500 dark:text-neutral-400">⌘K</kbd>
+            <kbd class="font-sans hidden text-sm/4 text-neutral-500 dark:text-neutral-400">Ctrl&nbsp;K</kbd>
+          </button> -->
+        </li>
+        <li class="p-1">
           <a href="/about" aria-label="Aller sur la page a propos">
             <span>A propos</span>
             <sup class="[@media(pointer:coarse)]:hidden"><Shortcut>i</Shortcut></sup>
