(feat) : basic integration of the search command menu

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import BlogArticle from "@/components/BlogArticle.astro";
+import SearchMenu from "@/components/SearchMenu.astro";
 
 
 
@@ -10,6 +11,10 @@ import BlogArticle from "@/components/BlogArticle.astro";
   <h1 class="text-2xl">Blog</h1>
 	<h2 class="text-neutral-500">Je documente ma veille et mon activité de freelance</h2>
 	
+  <div class="mt-12 sm:mt-16">
+    <SearchMenu />
+	</div>
+  
   <div class="group mt-12 sm:mt-16">
     <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
     <BlogArticle title='Lorem ipsum dolor sit amet' date='2023-01-01' categories={['React', 'Wordpress', 'AstroJS']} slug="#" />
