--- a/src/components/SearchMenu.astro
+++ b/src/components/SearchMenu.astro
@@ -3,11 +3,12 @@ import SearchMenuListItem from "./SearchMenuListItem.astro";
 
 
 ---
+<div class="fixed w-full z-20 inset-0 bg-black/40 backdrop-blur-xs pointer-events-auto"></div>
 
-<div role="dialog" class="max-w-xl mx-auto text-neutral-500 dark:text-neutral-400 bg-neutral-900/2 dark:bg-white/5 inset-ring inset-ring-neutral-950/8 dark:inset-ring-white/2 rounded-lg">
+<div role="dialog" class="fixed top-40 left-1/2 -translate-x-1/2 w-full z-999 max-w-xl  text-neutral-500 dark:text-neutral-400 bg-neutral-100 dark:bg-neutral-800 inset-ring inset-ring-neutral-950/8 dark:inset-ring-white/2 rounded-lg">
   <header class="flex items-center justify-between gap-2">
     <label for="search-input" class="inline-flex font-sans text-base/4 gap-1 rounded  py-3 px-4 w-full">
-      <input type="text" name="search-input" id="search-input" class="flex-1 pt-2 focus:outline-none focus:border-none" placeholder="Rechercher..." aria-label="Rechercher" />
+      <input type="text" name="search-input" id="search-input" class="flex-1 pt-2 focus:outline-none focus:border-none font-light" placeholder="Rechercher..." aria-label="Rechercher" />
       <button>
         <kbd class="text-xs/4 text-neutral-500 dark:text-neutral-400 rounded bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2  py-1 px-2">
           esc
