(feat) : modal is now toggle by pressing cmd k shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 import Shortcut from "@/components/ui/Shortcut.astro";
 
 import logo from "@/assets/Logo_3D.png"
-import SearchButton from "./SearchButton.astro";
+import SearchButton from "./SearchModal/SearchButton.astro";
 
 ---
 <header class="mb-16 sm:mb-32">
