--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
-import SearchMenu from '@/components/SearchMenu.astro';
+import SearchMenu from '@/components/SearchModal/SearchMenu.astro';
 
 
 
@@ -23,7 +23,7 @@ import SearchMenu from '@/components/SearchMenu.astro';
 		<ClientRouter />
 	</head>
 
-	<body class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100" data-theme="light">
+	<body class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100" data-theme="dark">
 		<SearchMenu />
 		<div class="mx-auto max-w-3xl overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
 			<Header />
