--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,11 @@ import SearchMenu from '@/components/SearchModal/SearchMenu.astro';
 		<ClientRouter />
 	</head>
 
-	<body class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100" data-theme="dark">
+	<body 
+		data-theme="dark"
+		data-modal="close"
+		class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100 overflow-auto data-[modal=open]:overflow-hidden data-[modal=open]:overscroll-contain data-[modal=open]:pointer-events-none data-[modal=open]:!mr-[15px]"
+	>
 		<div class="mx-auto max-w-3xl overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
 			<Header />
 			<slot />
